# Jetson-Software

./: .gitignore  CMakeLists.txt
cmake/: FindCURLPP.cmake  FindLZ4.cmake  (+2 more)
modules/Communication/CommunicationPointServer/: CMakeLists.txt
modules/Communication/CommunicationPointServer/cmake/: DependenciesAndmplementations.cmake
modules/Communication/CommunicationPointServer/include/CommunicationPointServer/: CommunicationPointFactoryMock.hpp  CommunicationPointServer.hpp  ICommunicationPoint.hpp  ICommunicationPointFactory.hpp
modules/Communication/CommunicationPointServer/src/: CommunicationPointServer.cpp
modules/Communication/CommunicationPointServer/tests/: CMakeLists.txt  CommunicationPointServerTests.cpp
modules/Communication/CommunicationPointServer/utilities/: getOpenServers.sh
modules/Communication/ComponentAccessControl/: CMakeLists.txt
modules/Communication/ComponentAccessControl/cmake/: DependenciesAndmplementations.cmake  SimpleAccessControlDependencies.cmake
modules/Communication/ComponentAccessControl/include/ComponentAccessControl/: IComponentAccessControl.hpp
modules/Communication/ComponentAccessControl/src/SimpleAccessControl/: SimpleAccessControl.cpp
modules/Communication/ComponentAccessControl/tests/: CMakeLists.txt  SimpleAccessControlTests.cpp  main.cpp
modules/Communication/DataPacketSocket/tests/: CMakeLists.txt  PacketSocketTests.cpp
modules/Communication/DataPackets/tests/: CMakeLists.txt  JSONPacketTests.cpp  PacketHeaderTests.cpp  RGBDFramePacketTests.cpp  main.cpp
modules/Communication/Sockets/: CMakeLists.txt  README.md
modules/Communication/Sockets/cmake/: DependenciesAndmplementations.cmake  IPCDependencies.cmake  TCPDependencies.cmake
modules/Communication/Sockets/include/Sockets/: ISocket.hpp  ISocketServer.hpp  SocketMock.hpp  SocketServerMock.hpp
modules/Communication/Sockets/src/IPC/: IPCServer.cpp  IPCSocket.cpp  UnixSocket.cpp  UnixSocketServer.cpp
modules/Communication/Sockets/src/TCP/: TCPServer.cpp  TCPSocket.cpp
modules/Communication/Sockets/tests/: CMakeLists.txt  SocketMmapTests.cpp  SocketsTests.cpp  main.cpp
modules/Sensors/Cameras/: CMakeLists.txt
modules/Sensors/Cameras/cmake/: AxisCameraDependencies.cmake  CameraClientDependencies.cmake  CameraCommunicationPointDependencies.cmake  DependenciesAndmplementations.cmake  UVCCameraDependencies.cmake
modules/Sensors/Cameras/include/Cameras/: CameraMock.hpp  ICamera.hpp
modules/Sensors/Cameras/samples/: AxisCameraPoint.cpp  CameraClientSample.cpp  UVCCameraPoint.cpp
modules/Sensors/Cameras/src/AxisCamera/: AxisCamera.cpp
modules/Sensors/Cameras/src/CameraClient/: CameraClient.cpp
modules/Sensors/Cameras/src/CameraCommunicationPoint/: CameraCommunicationPoint.cpp  CameraCommunicationPointFactory.cpp  CameraManager.cpp
modules/Sensors/Cameras/src/UVCCamera/: UVCCamera.cpp
modules/Sensors/Cameras/tests/: CMakeLists.txt  ICameraSimulator.hpp  main.cpp
modules/Sensors/Cameras/tests/CameraClientTests/: CameraClientTests.cpp  CameraIntegrationTests.cpp
modules/Sensors/Cameras/tests/CameraCommunicationPointTests/: CameraCommunicationPointTests.cpp  CameraManagerTests.cpp
modules/Sensors/RGBDCameras/: CMakeLists.txt
modules/Sensors/RGBDCameras/cmake/: DependenciesAndmplementations.cmake  RGBDCameraCommunicationPointDependencies.cmake  RealSenseCameraDependencies.cmake
modules/Sensors/RGBDCameras/config/RealSense/: DefaultPreset_D435.json
modules/Sensors/RGBDCameras/include/RGBDCameras/: IRGBDCamera.hpp  RGBDCameraMock.hpp
modules/Sensors/RGBDCameras/samples/: RealSenseCameraCapturer.cpp  RealSenseCameraPoint.cpp  RealSenseCameraSample.cpp  RealSenseCameraViewer.cpp
modules/Sensors/RGBDCameras/src/RGBDCameraCommunicationPoint/: RGBDCameraCommunicationPoint.cpp  RGBDCameraCommunicationPointFactory.cpp  RGBDCameraManager.cpp
modules/Sensors/RGBDCameras/src/RealSenseCamera/: RealSenseCamera.cpp
modules/Sensors/RGBDCameras/tests/: CMakeLists.txt  IRGBDCameraSimulator.hpp
modules/Sensors/RGBDCameras/tests/RGBDCameraCommunicationPointTests/: RGBDCameraCommunicationPointTests.cpp  RGBDCameraManagerTests.cpp
modules/Sensors/VideoCodecs/: CMakeLists.txt  README.md
modules/Sensors/VideoCodecs/cmake/: DependenciesAndmplementations.cmake  HEVCVideoCodecDependencies.cmake  JPEGVideoCodecDependencies.cmake  cvMatVideoCodecDependencies.cmake  x264VideoCodecDependencies.cmake
modules/Sensors/VideoCodecs/include/VideoCodecs/: IVideoDecoder.hpp  IVideoEncoder.hpp  VideoEncoderMock.hpp
modules/Sensors/VideoCodecs/src/HEVCVideoCodec/: HEVCVideoEncoder.cpp
modules/Sensors/VideoCodecs/src/JPEGVideoCodec/: JPEGVideoDecoder.cpp  JPEGVideoEncoder.cpp
modules/Sensors/VideoCodecs/src/cvMatVideoCodec/: cvMatVideoDecoder.cpp  cvMatVideoEncoder.cpp
modules/Sensors/VideoCodecs/src/x264VideoCodec/: x264VideoEncoder.cpp
modules/Sensors/VideoCodecs/tests/: CMakeLists.txt  HEVCVideoEncoderTests.cpp  JPEGVideoDecoderTests.cpp  JPEGVideoEncoderTests.cpp  cvMatVideoDecoderTests.cpp  cvMatVideoEncoderTests.cpp  x264VideoEncoderTests.cpp
modules/Utility/CommonInterfaces/: CMakeLists.txt
modules/Utility/CommonInterfaces/cmake/: DependenciesAndmplementations.cmake
modules/Utility/CommunicationUtility/tests/: CMakeLists.txt  StreamReaderWriterTests.cpp
modules/Utility/DeviceManager/: CMakeLists.txt
modules/Utility/DeviceManager/cmake/: DependenciesAndmplementations.cmake  DeviceManagerCommunicationPointDependencies.cmake  DeviceManagerWithAutoInitializationDependencies.cmake  DeviceManagerWithPriorityAccessDependencies.cmake
modules/Utility/DeviceManager/tests/: CMakeLists.txt  main.cpp
modules/Utility/EventLogger/: CMakeLists.txt
modules/Utility/EventLogger/cmake/: DependenciesAndmplementations.cmake
modules/Utility/EventLogger/src/: EventLogger.cpp
modules/Utility/EventLogger/tests/: CMakeLists.txt  EventLoggerTests.cpp
modules/Utility/VisionUtility/: CMakeLists.txt
modules/Utility/VisionUtility/cmake/: DependenciesAndmplementations.cmake
modules/Utility/VisionUtility/tests/: CMakeLists.txt  download.sh  main.cpp
(+98 files in other folders)
